; ModuleID = '/home/carl/AnghaBench/jemalloc/test/unit/extr_buf_writer.c_test_write_cb.c'
source_filename = "/home/carl/AnghaBench/jemalloc/test/unit/extr_buf_writer.c_test_write_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@test_write_len = common dso_local global i64 0, align 8
@arg_store = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"Test write overflowed\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*)* @test_write_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_write_cb(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i64, i64* @test_write_len, align 8
  store i64 %6, i64* %5, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = call i64 @strlen(i8* %7)
  %9 = load i64, i64* @test_write_len, align 8
  %10 = add i64 %9, %8
  store i64 %10, i64* @test_write_len, align 8
  %11 = load i8*, i8** %3, align 8
  %12 = bitcast i8* %11 to i32*
  %13 = load i32, i32* %12, align 4
  store i32 %13, i32* @arg_store, align 4
  %14 = load i64, i64* %5, align 8
  %15 = load i64, i64* @test_write_len, align 8
  %16 = call i32 @assert_zu_le(i64 %14, i64 %15, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  ret void
}

declare dso_local i64 @strlen(i8*) #1

declare dso_local i32 @assert_zu_le(i64, i64, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
